apps/base/store/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: store-front
spec:
  ingressClassName: nginx
  rules:
  - host: store-front.example.com
    http:
      paths:
      - backend:
          service: 
            name: store-front
            port: 
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - store-front.example.com
    secretName: store-front-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: store-front
spec:
  ingressClassName: nginx
  rules:
  - host: store-admin.example.com
    http:
      paths:
      - backend:
          service: 
            name: store-admin
            port: 
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - store-admin.example.com
    secretName: store-admin-tls
